wiredep added to builder for connect bower libraries

--- a/src/index.html
+++ b/src/index.html
@@ -3,16 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <!-- bower:css -->
+    <!-- endbower -->
 </head>
 <body>
 
     //= template/header.html
 
-    <section class="content">
+    <section class="content container">
         Content
     </section>
 
     //= template/footer.html
+
+    <!-- bower:js -->
+    <!-- endbower -->
 
 </body>
 </html>
