basic markup, btrsp grid and main blocks on index

--- a/src/index.html
+++ b/src/index.html
@@ -5,19 +5,20 @@
     <title>Title</title>
     <!-- bower:css -->
     <!-- endbower -->
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+    <div class="site-wrapper container">
+        //= template/nav.html
+        //= template/header.html
 
-    //= template/header.html
+        //= template/main.html
 
-    <section class="content container">
-        Content
-    </section>
 
-    //= template/footer.html
+        //= template/footer.html
 
+    </div>
     <!-- bower:js -->
     <!-- endbower -->
-
 </body>
 </html>
