templates for list - items on index

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
     <!-- bower:css -->
     <!-- endbower -->
     <link rel="stylesheet" href="css/main.css">
+    <!-- bower:js -->
+    <!-- endbower -->
 </head>
 <body>
     <div class="site-wrapper container">
@@ -18,7 +20,8 @@
         //= template/footer.html
 
     </div>
-    <!-- bower:js -->
-    <!-- endbower -->
+
+    //= template/article-item-template.html
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
