add fonts, new stylus files

--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <!-- bower:css -->
-    <!-- endbower -->
+    <!-- build:css css/vendor.css -->
+        <!-- bower:css -->
+        <!-- endbower -->
+    <!-- endbuild -->
     <link rel="stylesheet" href="css/main.css">
-    <!-- bower:js -->
-    <!-- endbower -->
+    <!-- build:js js/vendor.js -->
+        <!-- bower:js -->
+        <!-- endbower -->
+    <!-- endbuild -->
 </head>
 <body>
     <div class="site-wrapper container">
