page-title positioned, index-nav - styled, items - grid

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,11 @@
         //= template/nav.html
         //= template/header.html
 
-        //= template/main.html
+        <main class="content">
+            <div class="row col-lg inside">
+
+            </div>
+        </main>
 
 
         //= template/footer.html
