content block width fix

--- a/src/index.html
+++ b/src/index.html
@@ -18,11 +18,9 @@
         //= template/nav.html
         //= template/header.html
 
-        <main class="content">
-            <div class="row col-lg inside">
+        <div class="row inside">
 
-            </div>
-        </main>
+        </div>
 
 
         //= template/footer.html
