bootstrap native flex grid with gutters for content items

--- a/src/index.html
+++ b/src/index.html
@@ -18,15 +18,19 @@
     <div class="site-wrapper container">
         //= template/nav.html
         //= template/header.html
+    </div>
 
-        <div class="row inside">
+    <div class="container no-padding">
+        <div class="row row-eq-height inside">
 
         </div>
-
-
-        //= template/footer.html
-
     </div>
+
+
+
+        <!--//= template/footer.html-->
+
+
 
     //= template/article-item-template.html
     <script type="text/javascript" src="js/main.js"></script>
