--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
 
 
     //= template/index-articles-template.html
-    //= template/about.html
+    //= template/about-template.html
     <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
