smart-home img, brand-bunners

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,6 @@
 
     <div class="container no-padding">
         <div class="row row-eq-height inside">
-
         </div>
     </div>
 
@@ -33,7 +32,7 @@
 
 
     //= template/index-articles-template.html
-    //= template/about-template.html
+    //= template/features-template.html
     <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
