switch to one page render

--- a/src/index.html
+++ b/src/index.html
@@ -21,9 +21,17 @@
     </div>
 
     <div class="container no-padding">
-        <div class="row row-eq-height inside">
-        </div>
+        <div class="row row-eq-height inside"></div>
     </div>
+    <div class="container">
+        <div class="inside-features"></div>
+    </div>
+
+    <div class="row row-eq-height inside-contacts">
+
+    </div>
+    <div class="row row-eq-height inside-about"></div>
+
 
 
 
