--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
             <h3 class="text-uppercase">О нас</h3>
         </div>
         <div class="row inside-about">
-            <p class="lead bold">Молодая, динамично развивающаяся компания Ростова-на-Дону по&nbsp;внедрению высокотехнологичных
+            <p class="lead bold">Динамично развивающаяся компания Ростова-на-Дону по&nbsp;внедрению высокотехнологичных
                 систем: начиная от&nbsp;пожарной сигнализации и&nbsp;заканчивая умным домом. Мы&nbsp;можем сделать ваш
                 бизнес безопаснее и&nbsp;современнее. Автоматизация процессов, установка сетевого оборудования, датчиков,
                 камер&nbsp;&mdash; вот лишь небольшой спектр наших услуг. Подробнейшая документация поможет впоследствии
@@ -67,9 +67,9 @@
                 </p>
             </div>
             <div class="contact-item contact-item--call col-md-6">
-                <a class="d-block" href="tel:+78632491794"><i class="fa fa-phone fa-lg"></i>+7 (863) 249-17-94</a>
+                <a class="d-block" href="tel:+78632941794"><i class="fa fa-phone fa-lg"></i>+7 (863) 294-17-94</a>
                 <!--<a class="d-block" href="tel:+79500000000"><i class="fa fa-mobile fa-lg"></i>+7 950 000-00-00</a>-->
-                <a href="mailto:hello@fitnes-club.ru"><i class="fa fa-envelope"></i>hello@fitnes-club.ru</a>
+                <a href="mailto:kb-yg@mail.ru"><i class="fa fa-envelope"></i>kb-yg@mail.ru</a>
             </div>
         </div>
         <div class="row">
